# Flask_PyJWT

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  mypy.ini  poetry.toml  pyproject.toml
.github/workflows/: pytest.yml
doc/: api.rst  conf.py  configuration.rst  index.rst  install.rst  installation.rst  quickstart.rst
flask_pyjwt/: __init__.py  errors.py  exceptions.py  jwt.py  manager.py  typing.py  utils.py
tests/: config.py  conftest.py  id_rsa-testing  id_rsa-testing.pub  test_flask_pyjwt.py
