[tool.poetry]
name = "flask_pyjwt"
version = "0.3.0"
description = "Flask extension for creating, verifying, and requiring the presence of JWTs"
license = "MIT"
authors = ["Carson Mullins <septem151@protonmail.com>"]
readme = "README.rst"
homepage = "https://flask-pyjwt.readthedocs.io/"
repository = "https://github.com/Septem151/Flask_PyJWT"
keywords = ["flask", "authentication", "jwt", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = "^2.1.0"
Flask = "^1.1"
cryptography = "^3.4.7"
python-dotenv = "^0.17.1"
markupsafe = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^21.5b1"
isort = "^5.8.0"
pylint = "^2.8.2"
Sphinx = "^4.0.1"
mypy = "^0.991"
types-flask = "^1.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.design]
max-args = 6

[tool.pylint.messages_control]
# missing-module-docstring
disable = "C0114"

[tool.pylint.format]
max-line-length = "88"
